--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" 
+    <h1><b>Tables and Menus</b></h1>
   </head>
    <body>
     <table border="1">
